--- a/Areas/Developer/Views/Home/Index.cshtml
+++ b/Areas/Developer/Views/Home/Index.cshtml
@@ -312,7 +312,7 @@
         }
             });
 
-        google.charts.load('current', { 'packages': ['corechart'] });
+        google.charts.load('42', { 'packages': ['corechart'] });
         google.charts.setOnLoadCallback(drawChart);
 
         function drawChart() {
