--- a/Areas/Manager/Views/Home/GetDeveloperTask.cshtml
+++ b/Areas/Manager/Views/Home/GetDeveloperTask.cshtml
@@ -157,7 +157,6 @@
                         <div class="form-group row mb-3">
                             <div class="col-sm-3 d-flex align-items-center">
                                 <i class="fa fa-clipboard-check me-2" aria-hidden="true"></i>
-                                @* <img src="~/images/clipboard2-check-fill.svg" alt="clipboard icon" style="width:16px; height:16px; margin-right: 5px;" /> *@
                                 <label class="col-form-label mb-0"><b>Project:</b></label>
                             </div>
                             <div class="col-sm-9">
@@ -170,7 +169,6 @@
                         <div class="form-group row mb-3">
                             <div class="col-sm-3 d-flex align-items-center">
                                 <i class="fa fa-paint-brush me-2" aria-hidden="true"></i>
-                                @* <img src="~/images/brush-fill.svg" alt="brush-fill icon" style="width:16px; height:16px; margin-right: 5px;" /> *@
                                 <label class="col-sm-3 col-form-label"><b>Title:</b></label>
                             </div>
                             <div class="col-sm-9">
@@ -182,7 +180,6 @@
                         <div class="form-group row mb-3">
                             <div class="col-sm-3 d-flex align-items-center">
                                 <i class="fa fa-chalkboard me-2" aria-hidden="true"></i>
-                                @* <img src="~/images/easel2-fill.svg" alt="easel2-fill icon" style="width:16px; height:16px; margin-right: 5px;" /> *@
                                 <label class="col-sm-3 col-form-label"><b>Description:</b></label>
                             </div>
                             <div class="col-sm-9">
@@ -194,7 +191,6 @@
                         <div class="form-group row mb-3">
                             <div class="col-sm-3 d-flex align-items-center">
                                 <i class="fa fa-crosshairs me-2" aria-hidden="true"></i>
-                                @* <img src="~/images/crosshair2.svg" alt="crosshair2 icon" style="width:16px; height:16px; margin-right: 5px;" /> *@
                                 <label class="col-sm-3 col-form-label"><b>Priority:</b></label>
                             </div>
                             <div class="col-sm-9">
@@ -218,7 +214,6 @@
                         <div class="form-group row mb-3">
                             <div class="col-sm-3 d-flex align-items-center">
                                 <i class="fa fa-thumbtack me-2" aria-hidden="true"></i>
-                                @* <img src="~/images/pin-angle-fill.svg" alt="pin-angle-fill icon" style="width:16px; height:16px; margin-right: 5px;" /> *@
                                 <label class="col-sm-3 col-form-label"><b>Status:</b></label>
                             </div>
 
@@ -231,7 +226,6 @@
                         <div class="form-group row mb-3">
                             <div class="col-sm-3 d-flex align-items-center">
                                 <i class="fa fa-hourglass-half me-2" aria-hidden="true"></i>
-                                @* <img src="~/images/hourglass-top.svg" alt="hourglass-top icon" style="width:16px; height:16px; margin-right: 5px;" /> *@
                                 <label class="col-form-label mb-0"><b>Estimated days:</b></label>
                             </div>
 
@@ -244,7 +238,6 @@
                         <div class="form-group row mb-3">
                             <div class="col-sm-3 d-flex align-items-center">
                                 <i class="fa fa-calendar-day me-2" aria-hidden="true"></i>
-                               @*  <img src="~/images/calendar-event-fill.svg" alt="calendar-top icon" style="width:16px; height:16px; margin-right: 5px;" /> *@
                                 <label class="col-form-label mb-0"><b>Created date:</b></label>
                             </div>
                             <div class="col-sm-9">
@@ -256,8 +249,7 @@
                         <div class="form-group row mb-3">
                             <div class="col-sm-3 d-flex align-items-center">
                                 <i class="fa fa-chart-bar me-2" aria-hidden="true"></i>
-@*                                 <img src="~/images/bar-chart-fill.svg" alt="bar-chart-fill icon" style="width:16px; height:16px; margin-right: 5px;" />
- *@                                <label class="col-form-label mb-0"><b>Completion:</b></label>
+                               <label class="col-form-label mb-0"><b>Completion:</b></label>
                             </div>
                             <div class="col-sm-9">
                                 <label class="form-control-plaintext">@task.CompletePercentage</label>
@@ -268,7 +260,6 @@
                         <div class="form-group row mb-3">
                             <div class="col-sm-3 d-flex align-items-center">
                                 <i class="fa fa-calendar-alt me-2" aria-hidden="true"></i>
-                                @* <img src="~/images/calendar-event-fill.svg" alt="calendar-top icon" style="width:16px; height:16px; margin-right: 5px;" /> *@
                                 <label class="col-form-label mb-0"><b>End date:</b></label>
                             </div>
                             <div class="col-sm-9">
@@ -285,13 +276,13 @@
         var taskId = [];
 
         $(document).ready(function () {
-        @foreach (var item in Model)
-        {
-            <text>taskId.push(@item.TaskID);</text>
-        }
+                @foreach (var item in Model)
+                {
+                    <text>taskId.push(@item.TaskID);</text>
+                }
             });
 
-        google.charts.load('current', { 'packages': ['corechart'] });
+        google.charts.load('42', { 'packages': ['corechart'] });
         google.charts.setOnLoadCallback(drawChart);
 
         function drawChart() {
