Bug fixes & script file add

--- a/Areas/Admin/Views/Home/GenerateReports.cshtml
+++ b/Areas/Admin/Views/Home/GenerateReports.cshtml
@@ -54,6 +54,12 @@
                     <i class="fa-solid fa-download"></i>
                 </a>
             </li>
+            <li>
+                ✅ Get Tasks detail
+                <a href="@Url.Action("GetTaskDeails", "Home", new { area = "Admin" })" title="Task Detail">
+                    <i class="fa-solid fa-download"></i>
+                </a>
+            </li>
         </ul>
 
 
