--- a/Views/Home/Notifications.cshtml
+++ b/Views/Home/Notifications.cshtml
@@ -29,8 +29,7 @@
             <p>
 
                 <strong>For a limited time,</strong> you have <strong style="color:red">Manager privileges.</strong>
-                <ul>✅ You can create tasks</ul>
-                <ul>✅ You can view task updates</ul>
+                <ul>✅ You can create tasks and view task updates <a asp-area="Manager" asp-controller="Home" asp-action="Index" title="Explore"><i class="fa-solid fa-square-arrow-up-right"></i> </a></ul>
                 <ul>✅ You can submit bug reports, suggestions and feedbacks for this application <a asp-area="" asp-controller="Home" asp-action="Feedback" title="Explore"><i class="fa-solid fa-square-arrow-up-right"></i> </a> </ul>
                 <ul>✅ learn more about this application <a asp-area="" asp-controller="Home" asp-action="ProjectOverview" title="Explore"><i class="fa-solid fa-square-arrow-up-right"></i> </a> </ul>
                 <ul>❌ Access to <strong>Admin and Developer pages is restricted.</strong> </ul>
