--- a/Views/Home/Signup.cshtml
+++ b/Views/Home/Signup.cshtml
@@ -34,10 +34,7 @@
                 <!-- Top-left corner branding container -->
                 <div style="position: absolute; top: 10px; left: 10px; display: flex; align-items: center;">
                     <img src="~/favicon.ico" alt="Logo" style="height:30px;" />
-                    <a style="margin-left: 10px; font-weight: bold; font-size: 18px; text-decoration: none; color: white;"
-                       asp-area=""
-                       asp-controller="Home"
-                       asp-action="Index">
+                    <a href="#" style="margin-left: 10px; font-weight: bold; font-size: 18px; text-decoration: none; color: white;">
                         DevTaskFlow
                     </a>
                 </div>
