UI/UX changesReview changes

--- a/Areas/Admin/Views/Home/UpdateTask.cshtml
+++ b/Areas/Admin/Views/Home/UpdateTask.cshtml
@@ -17,7 +17,7 @@
 
     <style>
         body {
-            background: #f4f6fb !important;
+            background: #e9e9ef !important;
             /* For fullscreen backgrounds (optional in side-panels) */
         }
 
