--- a/Views/Home/Notifications.cshtml
+++ b/Views/Home/Notifications.cshtml
@@ -29,10 +29,10 @@
             <p>
 
                 <strong>For a limited time,</strong> you have <strong style="color:red">Manager privileges.</strong>
-                <ul>✅ You can create tasks and view task updates <a asp-area="Manager" asp-controller="Home" asp-action="Index" title="Explore"><i class="fa-solid fa-square-arrow-up-right"></i> </a></ul>
-                <ul>✅ You can submit bug reports, suggestions and feedbacks for this application <a asp-area="" asp-controller="Home" asp-action="Feedback" title="Explore"><i class="fa-solid fa-square-arrow-up-right"></i> </a> </ul>
-                <ul>✅ learn more about this application <a asp-area="" asp-controller="Home" asp-action="ProjectOverview" title="Explore"><i class="fa-solid fa-square-arrow-up-right"></i> </a> </ul>
-                <ul>❌ Access to <strong>Admin and Developer pages is restricted.</strong> </ul>
+                <ul> <i class="fa-solid fa-check"></i> You can create tasks and view task updates <a asp-area="Manager" asp-controller="Home" asp-action="Index" title="Explore"><i class="fa-solid fa-square-arrow-up-right"></i> </a></ul>
+                <ul> <i class="fa-solid fa-check"></i> You can submit bug reports, suggestions and feedbacks for this application <a asp-area="" asp-controller="Home" asp-action="Feedback" title="Explore"><i class="fa-solid fa-square-arrow-up-right"></i> </a> </ul>
+                <ul> <i class="fa-solid fa-check"></i> learn more about this application <a asp-area="" asp-controller="Home" asp-action="ProjectOverview" title="Explore"><i class="fa-solid fa-square-arrow-up-right"></i> </a> </ul>
+                <ul> <i class="fa-solid fa-xmark"></i> Access to <strong>Admin and Developer pages is restricted.</strong> </ul>
             </p>
         </section>
     }
@@ -42,7 +42,7 @@
         <section class="title-card">
             <h3>Welcome, Admin 👋</h3><br />
             <p>
-                <ul>✅ To Generate reports / Enable or Disable Api <a asp-area="Admin" asp-controller="Home" asp-action="GenerateReports" title="Explore"><i class="fa-solid fa-square-arrow-up-right"></i> </a></ul>
+                <ul><i class="fa-solid fa-check"></i> To Generate reports / Enable or Disable Api <a asp-area="Admin" asp-controller="Home" asp-action="GenerateReports" title="Explore"><i class="fa-solid fa-square-arrow-up-right"></i> </a></ul>
             </p>
         </section>
     }
@@ -52,9 +52,9 @@
         <section class="title-card">
             <h3>Welcome, Manager 👋</h3><br />
             <p>
-                <ul>✅ You can create tasks</ul>
-                <ul>✅ You can view task updates</ul>
-                <ul>❌ Access to <strong>Admin and Developer pages is restricted.</strong> </ul>
+                <ul><i class="fa-solid fa-check"></i> You can create tasks</ul>
+                <ul><i class="fa-solid fa-check"></i> You can view task updates</ul>
+                <ul><i class="fa-solid fa-xmark"></i> Access to <strong>Admin and Developer pages is restricted.</strong> </ul>
             </p>
         </section>
     }
@@ -64,7 +64,7 @@
         <section class="title-card">
             <h3>Welcome, Dev 👋</h3><br />
             <p>
-                <ul>✅ Update Task status <a asp-area="Developer" asp-controller="Home" asp-action="Index" title="Explore"><i class="fa-solid fa-square-arrow-up-right"></i> </a></ul>
+                <ul><i class="fa-solid fa-check"></i> Update Task status <a asp-area="Developer" asp-controller="Home" asp-action="Index" title="Explore"><i class="fa-solid fa-square-arrow-up-right"></i> </a></ul>
             </p>
         </section>
     }
