--- a/Areas/Manager/Views/Home/GetDeveloperTask.cshtml
+++ b/Areas/Manager/Views/Home/GetDeveloperTask.cshtml
@@ -14,7 +14,7 @@
 
     <style>
         body {
-            background: #e9e9ef;
+            background: #f4f6fb;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
 
@@ -252,7 +252,7 @@
                                <label class="col-form-label mb-0"><b>Completion:</b></label>
                             </div>
                             <div class="col-sm-9">
-                                <label class="form-control-plaintext">@((task.CompletePercentage == null ? 0 : task.CompletePercentage)) %</label>
+                                <label class="form-control-plaintext">@task.CompletePercentage</label>
                             </div>
                         </div>
 
