--- a/Areas/Manager/Views/Home/Index.cshtml
+++ b/Areas/Manager/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 @model IEnumerable<UsersViewModel>
 
 @{
-    ViewData["Title"] = "View Tasks";
+    ViewData["Title"] = "View/Create Tasks";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -16,8 +16,7 @@
         </div>
         <div style="margin-left: auto;">
             <button type="button" id="btnTaskCreate"
-                    @* onclick="openSidePanel('@Url.Action("Task", "Home", new { area = "Manager" })')" *@
-                    onclick="location.href='@Url.Action("Task", "Home", new { area = "Manager" })'"
+                    onclick="openSidePanel('@Url.Action("Task", "Home", new { area = "Manager" })')"
                     class="btn btn-primary">
                 Create Task
             </button>
@@ -47,7 +46,7 @@
                 <th>User Name</th>
                 <th>Role</th>
                 <th>IsActive</th>
-                <th>Ongoing Tasks</th>
+                <th>Concurrent Task</th>
                 <th>Skills</th>
             </tr>
         </thead>
