--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -40,7 +40,7 @@
         </div>
         <div id="rightpanel" style="flex: 1; background-color: #0a051a; display: flex; flex-direction: column; align-items: center; justify-content: center; gap: 10px;">
             <form asp-action="Login" asp-controller="Home" method="post" style="flex: 1; background-color: #0a051a; display: flex; flex-direction: column; align-items: center; justify-content: center; gap: 10px; width: 100%;">
-                <label id="welcometext" style="font-size: larger; font-family: auto; color: white;">
+                <label id="welcometext" style="font-size: larger; font-family: cursive; color: white;">
                     Are you signing in as a Guest or Registered User?
                 </label>
 
