--- a/Views/Home/Signup.cshtml
+++ b/Views/Home/Signup.cshtml
@@ -105,7 +105,7 @@
 
             </div>
             <div id="rightpanel" style="flex:1; background-color:#181235; display:flex; flex-direction:column; align-items:center; justify-content:center; gap:10px;">
-                <label id="welcometext" style="font-size: larger;font-family: auto;color:white;">You are signed in as a</label>
+                <label id="welcometext" style="font-size: larger;font-family: cursive;color:white;">You are signed in as a</label>
 
                 @if (Model.isRegisteredUser)
                 {
