--- a/Views/Home/Notifications.cshtml
+++ b/Views/Home/Notifications.cshtml
@@ -29,7 +29,8 @@
             <p>
 
                 <strong>For a limited time,</strong> you have <strong style="color:red">Manager privileges.</strong>
-                <ul> <i class="fa-solid fa-check"></i> You can create tasks and view task updates <a asp-area="Manager" asp-controller="Home" asp-action="Index" title="Explore"><i class="fa-solid fa-square-arrow-up-right"></i> </a></ul>
+                <ul> <i class="fa-solid fa-check"></i> You can create tasks <a asp-area="Manager" asp-controller="Home" asp-action="Task" title="Explore"><i class="fa-solid fa-square-arrow-up-right"></i> </a></ul>
+                <ul> <i class="fa-solid fa-check"></i> You can view task updates <a asp-area="Manager" asp-controller="Home" asp-action="Index" title="Explore"><i class="fa-solid fa-square-arrow-up-right"></i> </a></ul>
                 <ul> <i class="fa-solid fa-check"></i> You can submit bug reports, suggestions and feedbacks for this application <a asp-area="" asp-controller="Home" asp-action="Feedback" title="Explore"><i class="fa-solid fa-square-arrow-up-right"></i> </a> </ul>
                 <ul> <i class="fa-solid fa-check"></i> learn more about this application <a asp-area="" asp-controller="Home" asp-action="ProjectOverview" title="Explore"><i class="fa-solid fa-square-arrow-up-right"></i> </a> </ul>
                 <ul> <i class="fa-solid fa-xmark"></i> Access to <strong>Admin and Developer pages is restricted.</strong> </ul>
