--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -117,7 +117,7 @@
                         </div>
                         <div class="collapse @(ViewBag.CurrentPage == "Manager" ? "show" : "")" id="managerMenu">
                             <ul class="btn-toggle-nav list-unstyled fw-normal pb-0 small ps-3 mb-0">
-                                <li><a asp-area="Manager" asp-controller="Home" asp-action="Index" class="link-white text-decoration-none @(ViewBag.CurrentTab == "ViewTask" ? "active-sidebar-item" : "")">View Tasks</a></li>
+                                <li><a asp-area="Manager" asp-controller="Home" asp-action="Index" class="link-white text-decoration-none @(ViewBag.CurrentTab == "ViewTask" ? "active-sidebar-item" : "")">View Task Updates</a></li>
                             </ul>
                         </div>
                     </li>
